# diffFx-pytorch

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
diffFx_pytorch/processors/: __init__.py  base.py  base_utils.py
diffFx_pytorch/processors/core/: envelope.py  fir.py  iir.py  midside.py  phase.py  utils.py
diffFx_pytorch/processors/delay/: __init__.py  basic.py  multitap.py  multitaps.py  pinpong.py
diffFx_pytorch/processors/distortion/: __init__.py  bitcrusher.py  func.py
diffFx_pytorch/processors/dynamics/: __init__.py  compressor.py  deesser.py  expander.py  limiter.py  noisegate.py  transient.py
diffFx_pytorch/processors/eq/: __init__.py  graphicEQ.py  parametricEQ.py  tonestack.py
diffFx_pytorch/processors/filters/: __init__.py  biquad.py  dc.py  fir.py  linkwitzRiley.py
diffFx_pytorch/processors/gain/: __init__.py  gain.py
diffFx_pytorch/processors/modulation/: __init__.py  chorus.py  flanger.py  phaser.py  wahwah.py
diffFx_pytorch/processors/reverb/: __init__.py  noiseShape.py  schroeder.py
diffFx_pytorch/processors/spatial/: __init__.py  enhancer.py  imager.py  panning.py  widener.py
diffFx_pytorch/processors/utilites/: __init__.py  ms_proc.py  send_proc.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  mock_setup.py
docs/source/api/: base.rst  index.rst
tests/grad/: grad_base.py  test_biquad.py  test_bitcrusher.py  test_comp.py  test_delay.py  test_distortion.py  test_expander.py  test_gain.py  test_geq.py  test_limiter.py  test_mbcomp.py  test_mbexpander.py  test_mblimiter.py  test_mbnoisegate.py  test_mod.py  test_mssend.py  test_noisegate.py  test_peq.py  test_spatial.py  test_ts.py
tests/logic/: wahwah.py
(+37 files in other folders)
