[project]
name = "diffFx_pytorch"
version = "0.0.2"
description = "Differentiable audio effect processors in PyTorch."
authors = [
    { name = "Yen-Tung (Arthur) Yeh" },
    { email = "ytsrt66589@gmail.com" },
]
dependencies = ["torch", "numpy", "torchaudio",  "torchlpc==0.6.0", "torchcomp", "scipy", "numba-cuda==0.4.0", "pynvjitlink-cu12"]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel", "attrs"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
extra = ["matplotlib", "librosa"]